<resources>
    <string name="app_name">QtoAndy</string>
    <string name="main_title">Question2Answer Search</string>
    <string name="sub_title">With Admin Panel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search_posts">Search</string>
    <string name="search_delete">Search Delete</string>
    <string name="app_favorites">Favorites Item</string>
    <string name="not_yet_favorites">Not yet favorites</string>
    <string name="delete_all">Delete All</string>
    <string name="message_delete_all">Are you sure want to delete all favorites?</string>
    <string name="category_list">Category List</string>
    <string name="check_connection">Check your connection</string>
    <string name="not_yet_posts">Not yet postModel detail or Check your connection</string>
    <string name="view">View</string>
    <string name="deleted">Delete ?</string>
    <string name="not_yet_sub_category">Not yet sub-category</string>
    <string name="load_more_posts">Load More Posts</string>
    <string name="banner_ads">ca-app-pub-3553469696961315/1732679808</string>
    <string name="interstitial_ads">ca-app-pub-3553469696961315/8485790410</string>
    <string name="failed_load">Failed Load Data</string>
    <string name="no_data_available">No Data Available</string>
    <string name="no_data">Ooops, Post not found</string>
    <string name="finish_guide_posts">Finish Guide</string>
    <string name="next_guide_posts">Next</string>
    <string-array name="title_array">
        <item>Welcome</item>
        <item>Category Posts</item>
        <item>Display All Posts by limit number</item>
        <item>Search Featured Live Viewed</item>
    </string-array>
    <string-array name="description_array">
        <item>This is slider postModel display by Fragment</item>
        <item>This is category postModel display by Fragment</item>
        <item>This is all postModel display by increment value</item>
        <item>This is search featured, display postModel when keyword input</item>
    </string-array>
    <string name="item_name">What is the best shot we have so far?</string>
    <string name="item_description">asked Mar 11 in General by jacksiro (260 points)</string>
    <string name="item_tags">common, general, php, code,</string>
    <string name="recent_questions_and_answers">Recent questions and answers</string>
    <string name="google_play_store">https://play.google.com/store/apps/details?id=</string>
    <string name="please_wait_loading_data">Please wait . . .</string>
    <string name="FCM_PREF">com.appsmata.qtoa.ui.notification</string>
    <string name="FCM_TOKEN">com.appsmata.qtoa.ui.notification</string>
    <string name="PREFERENCES_NAME_ADS">com.appsmata.qtoa.ui</string>
    <string name="PREFERENCES_COUNTER">com.appsmata.qtoa.ui</string>
    <string name="text_share">Hi guy, I love this postModel, if you interest with this postModel you can get more postModel with download my app on play store </string>
    <string name="feedback">FEEDBACK</string>
    <string name="success">success</string>
    <string name="thank_feedback">Thank you for your feedback</string>
    <string name="exit">Are you sure want to exit now?</string>
    <string name="login">Login</string>
    <string name="your_email">Email Address</string>
    <string name="your_username">Preffered Username</string>
    <string name="your_password">Password</string>
    <string name="dont_have">Don\'t have account?</string>
    <string name="register_now">Register</string>
    <string name="have_acount">Do you have account?</string>
    <string name="your_name">Name</string>
    <string name="your_passkey">Email or Username</string>
    <string name="name">Please input</string>
    <string name="already_exists">Username or Email Already Exists</string>
    <string name="hello">"Hello "</string>
    <string name="points">" points"</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="about">QtoAndy : V.1.2.6</string>
    <string name="edit_process">EDIT PROFILE</string>
    <string name="rating_me">Rating us on Google Play Store</string>
    <string name="failed_upload_image">Failed to Upload Image. Try Again</string>
    <string name="success_upload_image">Your Profile Successfully Updated</string>
    <string name="loading_upload_image">Uploading image. . .</string>
    <string name="upload_image_error">Oops. Something error</string>
    <string name="validate_input">Please input email, username and password</string>
    <string name="image_upload">Success upload image</string>
    <string name="adding_comment">Adding comment . . .</string>
    <string name="success_adding_comment">New comment successfully added</string>
    <string name="about_app">About App</string>
    <string name="rating_text">If you like this app, please dont forget for rate my app on play store. Thanks</string>
    <string name="you_must_Login">You Must Login Earlier For Comment</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="micsearch">MicSearch</string>
    <string name="q_preview_label">The question preview</string>
    <string name="q_title_label">The question in one sentence:</string>
    <string name="q_category_label">Category</string>
    <string name="q_content_label">More information for the question:</string>
    <string name="q_tags_label">Tags - use hyphens to combine words:</string>
    <string name="post_view">Post View</string>
    <string name="post_title">Post Title</string>
    <string name="post_what">asked</string>
    <string name="post_when">Mar 10</string>
    <string name="post_in">in General</string>
    <string name="post_who">by jacksiro (150 points)</string>
    <string name="post_acount">0 Answers</string>
    <string name="post_color">Color:</string>
    <string name="post_texture">Texture:</string>
    <string name="post_count">120 available</string>
    <string name="post_volume">Volume:</string>
    <string name="post_volume_weight">Volume: 32x15x50 cm, Weight: 20 kg</string>
    <string name="post_weight">Weight:</string>
    <string name="post_details">asked 30 minutes ago in General by thisuser (120 points)</string>
    <string name="post_description">Description:</string>
    <string name="post_descriptions">The this item has many intresting things that you may like here when you look at it. I encourage you to take a second look of it if you dont mind abbout it.</string>
    <string name="post_manufacturer">Manufacturer:</string>
    <string name="post_tags">Tag1, Tag2, Tag3</string>
    <string name="your_answer">Your Answer</string>
    <string name="btn_answer">answer</string>
    <string name="btn_addanswer">Add answer</string>
    <string name="btn_cancel">Cancel</string>
    <string name="quiz_tab_one">Recent</string>
    <string name="quiz_tab_two">Hot!</string>
    <string name="quiz_tab_three">Most Votes</string>
    <string name="quiz_tab_four">Most Answers</string>
    <string name="quiz_tab_five">Most Views</string>
    <string name="una_tab_one">No Answers</string>
    <string name="una_tab_two">No Selected Answer</string>
    <string name="una_tab_three">No Upvoted Answer</string>
    <string name="users_tab_one">Top Scoring Users</string>
    <string name="users_tab_two">Newest Users</string>
    <string name="users_tab_three">Special Users</string>
    <string name="heading">Heading</string>
    <string name="subheading">SubHeading</string>
    <string name="more_button">MORE</string>
    <string name="card_app_name">App Name</string>
    <string name="sample_rating">4.3</string>
    <string name="free">FREE</string>
    <string name="card_numbering">1/5</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="show_installed_apps">Show installed apps</string>
    <string name="demo_size">46MB</string>
    <string name="app_header_name">Udacity - Clone Learning</string>
    <string name="app_dev_name">Udacity, Inc</string>
    <string name="app_three_plus">3+</string>
    <string name="app_size">29MB</string>
    <string name="install_button">Install</string>
    <string name="downloads">Downloads</string>
    <string name="sample_users">21,831</string>
    <string name="sample_category">Education</string>
    <string name="sample_similar">Similar</string>
    <string name="submit">SUBMIT</string>
    <string name="sample_date">02/04/218</string>
    <string name="all_reviews">ALL REVIEWS</string>
    <string name="my_updates">My Updates</string>
    <string name="my_session">Logout</string>
    <string name="my_profile">User jacksiro</string>
    <string name="my_account">My Account</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_wall">My Wall</string>
    <string name="my_messages">Private Messages</string>
    <string name="my_activity">Recent Activity</string>
    <string name="my_questions">All Questions</string>
    <string name="my_answers">All Answers</string>
    <string name="my_settings">App Settings</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="parent_guide">Parent Guide</string>
    <string name="about_this_app">About Question2Answer</string>
    <string name="demo_download_size">2.96MB/5.26MB</string>
    <string name="demo_download_percent">56%</string>
    <string name="button_open">OPEN</string>
    <string name="button_uninstall">UNINSTALL</string>
    <string name="top_categories">Top categories</string>
    <string name="all_categories">All categories</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="user_login">Login to your Account</string>
    <string name="user_register">Register your Account</string>
    <string name="title_activity_Login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="developer">© AppSmata</string>
    <string name="title_activity_dd_post_view">DdPostView</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_name">User Name</string>
    <string name="user_points">100 points</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>