<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|enterAlways"/>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                style="@style/CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:padding="5dp" >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/usericon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/user_login"
                        android:textSize="25sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:padding="5dp" >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_passkey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">

                        <EditText
                            android:id="@+id/input_passkey"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_edit_text1"
                            android:hint="@string/your_passkey"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:padding="10dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_edit_text1"
                            android:hint="@string/your_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:padding="10dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/button_Login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/custom_button1"
                        android:onClick="doLogin"
                        android:textColor="@color/white_color"
                        android:textSize="25sp"
                        android:text="@string/login" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:weightSum="100">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="3dp"
                            android:layout_weight="50"
                            android:gravity="bottom"
                            android:textSize="20sp"
                            android:text="@string/dont_have"
                            android:textColor="@color/black_color"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/register"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="30dp"
                            android:layout_weight="50"
                            android:gravity="bottom"
                            android:textSize="20sp"
                            android:text="@string/register_now"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>